creusot/tests/should_fail/prusti/deny_zombies/there_and_back.stderr
error: `&u32` cannot be moved from `'post` to `'pre` since it didn't exist at that point
 --> there_and_back.rs:5:28
  |
5 | #[ensures({let y = x; *old(y) == 0u32})]
  |                            ^

error: aborting due to 1 previous error

